<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michael.spark.SignUpActivity"
    android:background="@color/material_red_toolbar">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/sparkbg"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="BackgroundImage"
        android:layout_alignRight="@+id/editTextLayout"
        android:layout_alignEnd="@+id/editTextLayout" />


    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subTitle"
        style="@style/AuthSubTitle" />
    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">
        <EditText
            android:id="@+id/usernameField"
            android:hint="Username"
            style="@style/AuthEditText" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            style="@style/AuthEditText" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            style="@style/AuthEditText"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/button_divider"
        android:contentDescription="Button Divider"/>
    <Button
        android:text="@string/signup_button"
        android:id="@+id/signup_button"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@+id/buttonDivider"
        android:layout_marginRight="0dp"/>

    <Button
        android:text="@string/cancel_button"
        android:id="@+id/cancel_button"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_marginLeft="0dp"/>

</RelativeLayout>
